fix chart title dialog to left on mobile

--- a/sass/components/_chart-title.scss
+++ b/sass/components/_chart-title.scss
@@ -150,9 +150,9 @@
         }
         .cq-menu-dropdown{
             width: 100%;
-            margin: 0px;
-            top: 0px;
-            left: 0px;
+            margin: 0px !important;
+            top: 0px !important;
+            left: 0px !important;
             &.open{
                 margin: 0px;
                 bottom: auto;
